fixes blob animation and dark mode

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -107,15 +107,15 @@
 
 @keyframes profile__animate {
   0% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    border-radius: 55% 45% 45% 55%/55% 45% 55% 45%;
   }
 
   50% {
-    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    border-radius: 45% 55% 55% 45%/45% 55% 45% 55%;
   }
 
   100% {
-    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    border-radius: 55% 45% 45% 55%/55% 45% 55% 45%;
   }
 }
 
